# RN-Synth-Gen-Sandbox2

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: maps.yaml
config/experiments/: geolife_geoind_reid.yaml  geolife_reid_baseline.yaml
docs/: ARCHITECTURE.md  CODEBASE_DOCUMENTATION_PROMPT.md  CODEBASE_PHASE_GUIDE.md  CODEBASE_STRUCTURE.md  IMPLEMENTATION_PLAN.md  PROMPTS.md  REVIEW_P0-P5.md  RN_LDP_SYNTH_DESIGN.md  RUNNING.md  Tehnicna_zasnova_eksperimentalno_okolje.md
notebooks/: 01_matching_sanity.ipynb  02_pipeline_walkthrough.ipynb
src/trajguard/: __init__.py  geometry.py
src/trajguard/attacks/: __init__.py  attribute.py  base.py  membership.py  reconstruction.py  reidentification.py
src/trajguard/datamodel/: __init__.py  entities.py
src/trajguard/datasets/: __init__.py  base.py  cleaning.py  geolife.py  split.py
src/trajguard/evaluation/: __init__.py  base.py  metrics.py  roc.py  utility.py
src/trajguard/experiments/: __init__.py  builtins.py  cli.py  orchestrator.py  registry.py  rnldp_eval.py
src/trajguard/maps/: __init__.py  base.py  build.py  osm.py
src/trajguard/matching/: __init__.py  base.py  leuven.py
src/trajguard/privacy/: __init__.py  base.py  geoind.py  ldp.py  none.py
src/trajguard/reporting/: __init__.py  report.py  tradeoff.py
src/trajguard/reporting/templates/: report.md.j2
src/trajguard/representation/: __init__.py  views.py
src/trajguard/synthesis/: __init__.py  base.py  markov.py  rn_ldp_synth.py
tests/: conftest.py  test_attribute.py  test_cleaning.py  test_geoind.py  test_geolife.py  test_geometry.py  test_ldp.py  test_maps.py  test_markov.py  test_matching.py  test_membership.py  test_orchestrator.py  test_reconstruction.py  test_registry.py  test_reidentification.py  test_reporting.py  test_rn_ldp_synth.py  test_rnldp_eval.py  test_split.py  test_utility.py  test_views.py
tests/fixtures/geolife/: README.md
tests/fixtures/geolife/Data/000/Trajectory/: 20081023025304.plt  20081024081500.plt  20081025081500.plt  20081026081500.plt
tests/fixtures/geolife/Data/001/Trajectory/: 20081026103000.plt  20081027103000.plt  20081028103000.plt  20081029103000.plt
tests/fixtures/geolife/Data/002/Trajectory/: 20081101020000.plt  20081102144500.plt  20081103144500.plt  20081104144500.plt
tests/fixtures/geolife/Data/003/Trajectory/: 20081026123000.plt  20081027123000.plt  20081028123000.plt  20081029123000.plt
tests/fixtures/geolife/Data/004/Trajectory/: 20081104010000.plt  20081105010000.plt  20081106172000.plt  20081107172000.plt
tests/fixtures/geolife_onroad/: README.md
tests/fixtures/geolife_onroad/Data/005/Trajectory/: 20081201080000.plt  20081202080000.plt  20081203080000.plt  20081204080000.plt
tests/fixtures/geolife_onroad/Data/006/Trajectory/: 20081205080000.plt  20081206080000.plt  20081207080000.plt  20081208080000.plt
tests/fixtures/maps/beijing_fixture/: edges.parquet  graph.graphml  meta.json  nodes.parquet
