[project]
name = "trajguard"
version = "0.1.0"
description = "Trajectory privacy attack & protection benchmark"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.0",
    "jinja2>=3.1",
    "leuvenmapmatching>=1.1",
    "matplotlib>=3.8",
    "networkx>=3.0",
    "numpy>=1.24",
    "osmnx>=2.0",
    "pyarrow>=16.0",
    "pyproj>=3.6",
    "pyyaml>=6.0",
]

[project.scripts]
trajguard = "trajguard.experiments.cli:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "mypy>=1.10",
    "nbconvert>=7.16",
    "pytest>=8.0",
    "ruff>=0.5",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trajguard"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = [
    "geopandas.*",
    "leuvenmapmatching.*",
    "matplotlib.*",
    "networkx.*",
    "osmnx.*",
    "pandas.*",
    "pyarrow.*",
    "shapely.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
